--- a/Spirtual.html
+++ b/Spirtual.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
-    <title>Visit-Himachal</title>
+    <title>Mini-Project</title>
 </head>
 
 <body style="font-family: 'Lora', serif;">
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navid">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="https://adi26012004soni.github.io/VisitHimachal.github.io/" class="nav-link"> Home</a>
+                        <a href="http://127.0.0.1:5500/index.html" class="nav-link"> Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link"> How To Reach</a>
